--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-  /* @import "tailwindcss"; */
-  @import "tailwindcss" important;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap');
+/* @import "tailwindcss"; */
+@import "tailwindcss" important;
 @plugin "tailwindcss-animate";
-
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -11,7 +11,7 @@
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter",system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -29,7 +29,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: #D57A66;
+  --primary: #008ECC;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -39,8 +39,8 @@
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: #F5E6D3;
-  --input: #3C2F2F;
+  --border: #E5E5E5;
+  --input: #404040;
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -58,9 +58,12 @@
   --sidebar-ring: oklch(0.708 0 0);
   --color-warp-100: #122442;
   --input-secondary: #B5A398;
-  --main: #6A4E42;
+  --main: #008ECC;
 }
 
+.font-manrope {
+  font-family: "Manrope", system-ui, Avenir, Helvetica, Arial, sans-serif;
+} 
 a {
   font-weight: 500;
   color: #646cff;
