--- a/src/index.css
+++ b/src/index.css
@@ -195,12 +195,14 @@ button:focus-visible {
   --color-input-secondary: var(--input-secondary);
   --color-main: var(--main);
   --color-light-blue: var(--light-blue);
+  --color-primary: var(--primary);
+  --color-main: var(--main);
 }
 
 @layer base {
-  * {
+  /* * {
     @apply border-border outline-ring/50;
-  }
+  } */
   body {
     @apply bg-background text-foreground;
   }
